material do cefet

--- a/gsi526.html
+++ b/gsi526.html
@@ -68,26 +68,26 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 1º Semestre de 2019 - Sistemas de Informação (UFU)</span>
-				<h2>GSI526 - Engenharia de Software</h2>
+				<span>Disciplinas 2º Semestre de 2019 - Engenharia de Computação</span>
+				<h2>Engenharia de Software I</h2>
 			</div>
 		</div>
 		<div id="fh5co-main-content">
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
-					<div>
+					<!--<div>
 					<b>Ementa:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/plano-esof.pdf"> Plano de Ensino</a></li>
 					</ul>
-					</div>
+					</div> -->
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 25 pts <b>(10/04)</b></li>
-					<li>Prova 2 - 30 pts <b>(23/05)</b></li>
-					<li>Prova 3 - 30 pts <b>(04/07)</b> - <i> Aulas 12, 13, 14, 15 e 16</i></li>
-					<li>Seminário - 15 pts <b>(12/06, 13/06, 17/06 e 19/06)</b> -> <i> Dia 17/06 no Lab. de IHC a partir das 16h</i></li>
+					<li>Prova 1 - 25 pts <b>(05/09)</b></li>
+					<li>Prova 2 - 30 pts <b>(17/10)</b></li>
+					<li>Prova 3 - 30 pts <b>(21/11)</b></li>
+					<li>Seminário - 15 pts <b>(25/11 e 28/11)</b></li>
 					</ul>
 					</div>
 					<b>Material:</b>
@@ -95,7 +95,7 @@
 						<ul>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 1 - História da Engenharia de Software.pdf"> Aula 1 - Introdução à Engenharia de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 2 - Requisitos de Software.pdf"> Aula 2 - Requisitos de Software</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 3 - Processos de Software.pdf"> Aula 3 - Processos de Software</a></button></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 3 - Processos de Software.pdf"> Aula 3 - Processos de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 4 - Processo Unificado.pdf"> Aula 4 - Processo Unificado</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 5 - Manifesto_agil.pdf"> Aula 5 - Manifesto Ágil</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 5 - Metodos_ageis.pdf"> Aula 5 - Métodos Ágeis</a></button></li>
