update do site de eng. software 1 (lab)

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -92,9 +92,9 @@
 					<b>Material:</b>
 					<div>
 						<ul>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicio01.pdf"> Exercício 01</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicio02.pdf"> Exercício 02</a></button></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 2 - Requisitos de Software.pdf"> Aula 2 - Requisitos de Software</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 1 - Exercícios de POO </a></button></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicio02.pdf"> Exercício 02</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 2 - Requisitos de Software.pdf"> Aula 2 - Requisitos de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 3 - Processos de Software.pdf"> Aula 3 - Processos de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 4 - Processo Unificado.pdf"> Aula 4 - Processo Unificado</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 5 - Manifesto_agil.pdf"> Aula 5 - Manifesto Ágil</a></button></li>
