--- a/poo.html
+++ b/poo.html
@@ -94,8 +94,8 @@
 						<ul>						
 						<li><i class="icon-book"></i><a href="aulas/poo/1.Introdução.ppt"> Aula 1 - Introdução</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/2.POO-Conceitos.ppt"> Aula 2 - Conceitos de POO</a></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/3.Introdução a Java.ppt"> Aula 3 - Introdução a Java</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/4.Semântica de Referência.ppt"> Aula 4 - Semântica de Referência</a></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/3.Introdução a Java.ppt"> Aula 3 - Introdução a Java</a></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/4.Semântica de Referência.ppt"> Aula 4 - Semântica de Referência</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/5.Associação entre Objetos.ppt"> Aula 5 - Associação entre Objetos</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/6.Herança.ppt"> Aula 6 - Herança</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/7.Classes Abstratas e Interfaces.ppt"> Aula 7 - Classes Abstratas e Interfaces</a></li>
