material de lab. de esof

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -93,54 +93,29 @@
 					<div>
 						<ul>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 1 - Exercícios de POO </a></button></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicio02.pdf"> Exercício 02</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 2 - Requisitos de Software.pdf"> Aula 2 - Requisitos de Software</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 3 - Processos de Software.pdf"> Aula 3 - Processos de Software</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 4 - Processo Unificado.pdf"> Aula 4 - Processo Unificado</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 5 - Manifesto_agil.pdf"> Aula 5 - Manifesto Ágil</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 5 - Metodos_ageis.pdf"> Aula 5 - Métodos Ágeis</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 5 - Scrum.pdf"> Aula 5 - Scrum: Papéis e Reuniões</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 6 - Extreme Programming.pdf"> Aula 6 - Programação Extrema (XP)</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 7 - Smells.ppt"> Aula 7 - <i>Bad Smells</i> e Refatoração</a></button></li>	
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 8-Reuso-Parte1.ppt"> Aula 8 - Reuso de Software</a></button></li>	
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 8-Técnicas de Reuso.ppt"> Aula 8 - Técnicas de Reuso de Software</a></button></li>	
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula9 - Manutencao de Software.pdf"> Aula 9 - Manutenção de Software</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula9 - Validacao-Verificacao-Teste.pdf"> Aula 9 - Validação, Verificação e Teste</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula9 - Testes de Unidade.pdf"> Aula 9 - Testes de Unidade</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula9 - Testes de Desenvolvimento.pdf"> Aula 9 - Testes de Desenvolvimento</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula9 - Testes de Release.pdf"> Aula 9 - Testes de Release </a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 10 - Arquitetura de Software.pdf"> Aula 10 - Arquitetura de Software</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 11 - Papel_Arquiteto_Software.pptx"> Aula 11 - O Papel do Arquiteto de Software</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 12 - WebMVCePatterns.pdf"> Aula 12 - O Padrão Web MVC (Model-View-Controller)</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 13 - SistemasDeControleDeVersao.pdf"> Aula 13 - Sistemas de Controle de Versão</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 14 - Classes E Relacionamentos.pdf"> Aula 14 - Classes e Relacionamentos</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 14 - Idiomas de Programação.pdf"> Aula 14 - Idiomas de Programação</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 15 - Membros de Classes.pdf"> Aula 15 - Membros de Classes</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/PadroesGoF.pdf"> Aula 16 - Padrões de Projeto</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/lista_exercicios_esof.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Lista de Exercícios</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/slides_seminarios.rar"> <img src="images/new2.gif" alt="" height="11" width="28"> Slides dos Seminários</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/seminario_esof.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Seminário</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/notas_esof_2019_1.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Notas Finais</b></a></button></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 3 - Arquitetura de SW.pptx"> Aula 3 - Arquitetura de Software</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 8-Reuso-Parte1.ppt"> Aula 8 - Reuso de Software (Parte 1)</a></button></li>						
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 8-Reuso-Parte2.pdf"> Aula 8 - Reuso de Software (Parte 2)</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 8-Técnicas de Reuso.ppt"> Aula 8 - Técnicas de Reuso de Software </a></button></li>						
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula9 - Validacao-Verificacao-Teste.pdf"> Aula 9 - Verificação, Validação e Teste de Software</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula9 - Testes de Unidade.pdf"> Aula 9 - Testes de Unidade</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula9 - Testes de Desenvolvimento.pdf"> Aula 9 - Testes de Desenvolvimento</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula9 - Testes de Release.pdf"> Aula 9 - Testes de Release </a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula10 - SistemasDeControleDeVersao.pdf"> Aula 10 - Sistemas de Controle de Versão</a></button></li>	
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula11 - Conceitos de POO.pdf"> Aula 11 - Conceitos de POO</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula12 - Classes E Relacionamentos.pdf"> Aula 12 - Classes e Relacionamentos </a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula13 - Membros de Classes.pdf"> Aula 13 - Membros de Classes </a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/notas_esof.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Notas Finais </a></button></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/aula5.pdf"> Aula 5</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/aula6.pdf"> Aula 6</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/aula7.pdf"> Aula 7</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/aula8.pdf"> Aula 8</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/aula9.pdf"> Aula 9</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/GWT-Tutorial.pdf"> Aula 2 - Tutorial de GWT </a></button></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 1 - Exercícios de POO </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 1 - Exercícios de POO </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 1 - Exercícios de POO </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 1 - Exercícios de POO </a></button></li>			
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicio02.pdf"> Exercício 02</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/aula10.pdf"> Aula 10</a></button></li>-->
 						</ul>
+					</div>
+					<div>
+					<b>Código-fonte de projetos e links diversos:</b>
+					<ul>
+					<li><i class="icon-stackoverflow"></i><a href="http://www.gwtproject.org/doc/latest/DevGuideCodingBasicsClient.html" target="_blank">Onde aprender tudo sobre o framework Web GWT?</a></li>
+					<li><i class="icon-stackoverflow"></i><a href= "http://samples.gwtproject.org/samples/Showcase/Showcase.html#!CwCheckBox" target="_blank">GWT Showcase of Features</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/PortariaPredio.rar"> Sistema de Portaria de Prédio</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/EmpresaFuncionarios.rar"> Sistema de Tipos de Funcionários</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/HelloWorld.rar"> Hello World GWT Application</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/StockWatcher.rar"> StockWatcher GWT Application</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/LoginApp.rar"> Login GWT Application</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/Cars.rar"> Cars GWT Application</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/CarSales.rar"> Car Sales GWT Application</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/database_tables.sql"> Tabelas do banco de dados MySQL (Dump)</a></li>
+					</ul>
 					</div>
 				</div>
 			</div>
