--- a/gsi526.html
+++ b/gsi526.html
@@ -96,8 +96,8 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 1 - História da Engenharia de Software.pdf"> Aula 1 - Introdução à Engenharia de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 2 - Requisitos de Software.pdf"> Aula 2 - Requisitos de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 3 - Processos de Software.pdf"> Aula 3 - Processos de Software</a></button></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 4 - Processo Unificado.pdf"> Aula 4 - Processo Unificado</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 5 - Manifesto_agil.pdf"> Aula 5 - Manifesto Ágil</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 4 - Processo Unificado.pdf"> Aula 4 - O Processo Unificado</a></button></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 5 - Manifesto_agil.pdf"> Aula 5 - Manifesto Ágil</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 5 - Metodos_ageis.pdf"> Aula 5 - Métodos Ágeis</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 5 - Scrum.pdf"> Aula 5 - Scrum: Papéis e Reuniões</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 6 - Extreme Programming.pdf"> Aula 6 - Programação Extrema (XP)</a></button></li>
