--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -94,8 +94,8 @@
 						<ul>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 1 - Exercícios de POO </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/GWT-Tutorial.pdf"> Aula 2 - Tutorial de GWT </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/pluginGWT.pdf"> Aula 3 - Tutorial do GWT </a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 1 - Exercícios de POO </a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 1 - Exercícios de POO </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 1 - Exercícios de POO </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 1 - Exercícios de POO </a></button></li>			
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicio02.pdf"> Exercício 02</a></button></li>
@@ -105,6 +105,7 @@
 					<div>
 					<b>Código-fonte de projetos e links diversos:</b>
 					<ul>
+					<li><i class="icon-stackoverflow"></i><a href="https://www.eclipse.org/downloads/download.php?file=/technology/epp/downloads/release/mars/2/eclipse-jee-mars-2-linux-gtk-x86_64.tar.gz" target="_blank">Link do Eclipse IDE Mars 2</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="http://www.gwtproject.org/doc/latest/DevGuideCodingBasicsClient.html" target="_blank">Onde aprender tudo sobre o framework Web GWT?</a></li>
 					<li><i class="icon-stackoverflow"></i><a href= "http://samples.gwtproject.org/samples/Showcase/Showcase.html#!CwCheckBox" target="_blank">GWT Showcase of Features</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/PortariaPredio.rar"> Sistema de Portaria de Prédio</a></li>
