--- a/poo-lab.html
+++ b/poo-lab.html
@@ -95,6 +95,7 @@
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 1.pdf"> Exercício Prático 1</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Pratica 2.pdf"> Exercício Prático 2</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 3.pdf"> Exercício Prático 3</a></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 4.pdf"> Exercício Prático 4</a></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/3.Introdução a Java.ppt"> Aula 3 - Introdução a Java</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/4.Semântica de Referência.ppt"> Aula 4 - Semântica de Referência</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/5.Associação entre Objetos.ppt"> Aula 5 - Associação entre Objetos</a></li>
