coloquei a materia da prova de esof

--- a/gsi526.html
+++ b/gsi526.html
@@ -84,7 +84,7 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 25 pts <b>(05/09)</b></li>
+					<li>Prova 1 - 25 pts <b>(05/09)</b> - <i>Aulas 1, 2, 3 e 4</i></li>
 					<li>Prova 2 - 30 pts <b>(17/10)</b></li>
 					<li>Prova 3 - 30 pts <b>(21/11)</b></li>
 					<li>Seminário - 15 pts <b>(25/11 e 28/11)</b></li>
