adiconei lista para a prova 1 de esof

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -81,14 +81,14 @@
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/plano-esof.pdf"> Plano de Ensino</a></li>
 					</ul>
 					</div> -->
-					<div>
+					<!-- <div>
 					<b>Avaliação:</b>
 					<ul>
 					<li>Trabalho 1 - 30 pts <b>(05/09)</b></li>
 					<li>Trabalho 2 - 35 pts <b>(17/10)</b></li>
 					<li>Trabalho 3 - 35 pts <b>(28/11)</b></li>
 					</ul>
-					</div>
+					</div> -->
 					<b>Material:</b>
 					<div>
 						<ul>
