adicionei o trabalho pratico 1 de pc2

--- a/poo-lab.html
+++ b/poo-lab.html
@@ -81,14 +81,14 @@
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/plano-modelagem.pdf"> Plano de Ensino</a></li>
 					</ul>
 					</div> -->
-					<!--<div>
+					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 30 pts <b>(10/09)</b></li>
-					<li>Prova 2 - 35 pts <b>(22/10)</b></li>
-					<li>Prova 3 - 35 pts <b>(26/11)</b></li>					
+					<li>Trabalho 1 - 30 pts <b>(para o dia 15/10/2019)</b><a href="aulas/lab-poo/TP1.pdf"> - <i>Trabalho 1 </i></a></li>
+					<!--<li>Prova 2 - 35 pts <b>(22/10)</b></li>
+					<li>Prova 3 - 35 pts <b>(26/11)</b></li> -->					
 					</ul>
-					</div> -->
+					</div> 
 					<b>Material:</b>
 					<div>
 						<ul>						
@@ -96,6 +96,7 @@
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Pratica 2.pdf"> Exercício Prático 2</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 3.pdf"> Exercício Prático 3</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 4.pdf"> Exercício Prático 4</a></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 5.pdf"> Exercício Prático 5</a></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/3.Introdução a Java.ppt"> Aula 3 - Introdução a Java</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/4.Semântica de Referência.ppt"> Aula 4 - Semântica de Referência</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/5.Associação entre Objetos.ppt"> Aula 5 - Associação entre Objetos</a></li>
