--- a/gsi526.html
+++ b/gsi526.html
@@ -90,20 +90,19 @@
 					<li>Seminário - 15 pts <b>(25/11 e 28/11)</b></li>
 					</ul>
 					</div>
-					<b>Material:</b>
 					<div>
+						<b>Material:</b>
 						<ul>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 1 - História da Engenharia de Software.pdf"> Aula 1 - Introdução à Engenharia de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 2 - Requisitos de Software.pdf"> Aula 2 - Requisitos de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 3 - Processos de Software.pdf"> Aula 3 - Processos de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 4 - Processo Unificado.pdf"> Aula 4 - O Processo Unificado</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/lista_prova1.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Lista para a Prova 1</a></button></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 5 - Manifesto_agil.pdf"> Aula 5 - Manifesto Ágil</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 5 - Manifesto_agil.pdf"> Aula 5 - Manifesto Ágil</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 5 - Metodos_ageis.pdf"> Aula 5 - Métodos Ágeis</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 5 - Scrum.pdf"> Aula 5 - Scrum: Papéis e Reuniões</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 5 - Metodologia_Scrum.pdf"> Aula 5 - Scrum: Papéis e Reuniões</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 6 - Extreme Programming.pdf"> Aula 6 - Programação Extrema (XP)</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 7 - Smells.ppt"> Aula 7 - <i>Bad Smells</i> e Refatoração</a></button></li>	
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Reuso-Parte1.ppt"> Aula 8 - Reuso de Software</a></button></li>	
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Reuso-Parte1.ppt"> Aula 8 - Reuso de Software</a></button></li>	
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Técnicas de Reuso.ppt"> Aula 8 - Técnicas de Reuso de Software</a></button></li>	
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Manutencao de Software.pdf"> Aula 9 - Manutenção de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Validacao-Verificacao-Teste.pdf"> Aula 9 - Validação, Verificação e Teste</a></button></li>
@@ -142,6 +141,17 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula9.pdf"> Aula 9</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula10.pdf"> Aula 10</a></button></li>-->
 						</ul>
+					</div>
+					<div>
+					<b>Links diversos:</b>
+					<ul>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/lista_prova1.pdf"> Lista para a Prova 1</a></button></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/notas_esof_cefet_2019.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Notas Parciais</b></a></button></li>
+					<!-- <li><i class="icon-stackoverflow"></i><a href="https://www.w3schools.com/"> Tutorial sobre PHP, JavaScript, HTML, CSS</a></button></li>
+					<li><i class="icon-stackoverflow"></i><a href="aulas/gsi538/GWT-Tutorial.pdf"> Tutorial: Como instalar o plugin do GWT no Eclipse IDE</a></button></li>
+					<li><i class="icon-stackoverflow"></i><a href="http://www.gwtproject.org/doc/latest/DevGuideCodingBasicsClient.html" target="_blank">Onde aprender tudo sobre o framework Web GWT?</a></li>
+					<li><i class="icon-stackoverflow"></i><a href= "http://samples.gwtproject.org/samples/Showcase/Showcase.html#!CwCheckBox" target="_blank">GWT Showcase of Features</a></li> -->
+					</ul>
 					</div>
 				</div>
 			</div>
