--- a/poo.html
+++ b/poo.html
@@ -96,9 +96,9 @@
 						<li><i class="icon-book"></i><a href="aulas/poo/2.POO-Conceitos.ppt"> Aula 2 - Conceitos de POO</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/3.Introdução a Java.ppt"> Aula 3 - Introdução a Java</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/4.Semântica de Referência.ppt"> Aula 4 - Semântica de Referência</a></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/5.Associação entre Objetos.ppt"> Aula 5 - Associação entre Objetos</a></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/5.Associação entre Objetos.ppt"> Aula 5 - Associação entre Objetos</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/6.Herança.ppt"> Aula 6 - Herança</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/7.Classes Abstratas e Interfaces.ppt"> Aula 7 - Classes Abstratas e Interfaces</a></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/7.Classes Abstratas e Interfaces.ppt"> Aula 7 - Classes Abstratas e Interfaces</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/8-Coleções.ppt"> Aula 8 - Coleções</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/9.Polimorfismo.ppt"> Aula 9 - Polimorfismo</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/10.Tratamento de Exceções.ppt"> Aula 10 - Tratamento de Exceções</a></li>
@@ -135,13 +135,14 @@
 						<li><i class="icon-book"></i><a href="aulas/poo/aula10.pdf"> Aula 10</a></li>-->
 						</ul>
 					</div>
-					<!--<div>
-					<b>Trabalho Final:</b>
+					<div>
+					<b>Links diversos:</b>
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/poo/P1-HealthWatcher.pdf"> Documento de Requisitos: <i>Health-Watcher</i></a></li>
-					<li><i class="icon-book"></i><a href="aulas/poo/trab_modelagem.pdf"> Especificação do Trabalho</a></li>
+					<li><i class="icon-book"></i><a href="aulas/poo/notas_pc2_cefet_2019.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Notas Parciais</b></a></button></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/poo/P1-HealthWatcher.pdf"> Documento de Requisitos: <i>Health-Watcher</i></a></li>
+					<li><i class="icon-book"></i><a href="aulas/poo/trab_modelagem.pdf"> Especificação do Trabalho</a></li> -->
 					</ul>
-					</div>-->
+					</div>
 				</div>
 			</div>
 		</div>
