mudei as apps do GWT para o formato zip

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -108,13 +108,13 @@
 					<li><i class="icon-stackoverflow"></i><a href="https://www.eclipse.org/downloads/download.php?file=/technology/epp/downloads/release/mars/2/eclipse-jee-mars-2-linux-gtk-x86_64.tar.gz" target="_blank">Link do Eclipse IDE Mars 2</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="http://www.gwtproject.org/doc/latest/DevGuideCodingBasicsClient.html" target="_blank">Onde aprender tudo sobre o framework Web GWT?</a></li>
 					<li><i class="icon-stackoverflow"></i><a href= "http://samples.gwtproject.org/samples/Showcase/Showcase.html#!CwCheckBox" target="_blank">GWT Showcase of Features</a></li>
-					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/PortariaPredio.rar"> Sistema de Portaria de Prédio</a></li>
-					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/EmpresaFuncionarios.rar"> Sistema de Tipos de Funcionários</a></li>
-					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/HelloWorld.rar"> Hello World GWT Application</a></li>
-					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/StockWatcher.rar"> StockWatcher GWT Application</a></li>
-					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/LoginApp.rar"> Login GWT Application</a></li>
-					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/Cars.rar"> Cars GWT Application</a></li>
-					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/CarSales.rar"> Car Sales GWT Application</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/PortariaPredio.zip"> Sistema de Portaria de Prédio</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/EmpresaFuncionarios.zip"> Sistema de Tipos de Funcionários</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/HelloWorld.zip"> Hello World GWT Application</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/StockWatcher.zip"> StockWatcher GWT Application</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/LoginApp.zip"> Login GWT Application</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/Cars.zip"> Cars GWT Application</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/CarSales.zip"> Car Sales GWT Application</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/database_tables.sql"> Tabelas do banco de dados MySQL (Dump)</a></li>
 					</ul>
 					</div>
