coloquei no site o trab. pratico de esof

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -81,20 +81,24 @@
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/plano-esof.pdf"> Plano de Ensino</a></li>
 					</ul>
 					</div> -->
-					<!-- <div>
-					<b>Avaliação:</b>
+					<div>
+					<b>Avaliação e Prazos:</b>
 					<ul>
-					<li>Trabalho 1 - 30 pts <b>(05/09)</b></li>
-					<li>Trabalho 2 - 35 pts <b>(17/10)</b></li>
-					<li>Trabalho 3 - 35 pts <b>(28/11)</b></li>
+					<li>Trabalho Prático - 100 pts</li>
+					<li>Definição dos grupos <b>(até 30/09)</b></li>
+					<li>Entrega da primeira fase <b>(até 6/11)</b></li>
+					<li>Arguição dos grupos <b>(13/11)</b></li>
+					<li>Entrega da segunda fase <b>(04/12)</b></li>
 					</ul>
-					</div> -->
+					</div> 
 					<b>Material:</b>
 					<div>
 						<ul>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 1 - Exercícios de POO </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/GWT-Tutorial.pdf"> Aula 2 - Tutorial de GWT </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/pluginGWT.pdf"> Aula 3 - Plugin do GWT (Instalação) </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/especificacao_trab.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Trabalho </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/sistema_reserva.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Diagrama de Classe do Trabalho </a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 1 - Exercícios de POO </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 1 - Exercícios de POO </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 1 - Exercícios de POO </a></button></li>			
