coloquei um exercicio para amanha de GWT

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -97,6 +97,7 @@
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 1 - Exercícios de POO </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/GWT-Tutorial.pdf"> Aula 2 - Tutorial de GWT </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/pluginGWT.pdf"> Aula 3 - Plugin do GWT (Instalação) </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/exercicio_lab.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Exercício Prático (Aula 18/09) </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/especificacao_trab.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Trabalho </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/sistema_reserva.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Diagrama de Classe do Trabalho </a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 1 - Exercícios de POO </a></button></li>
