atualizei o site de esof com a nova avaliacao

--- a/gsi526.html
+++ b/gsi526.html
@@ -85,8 +85,9 @@
 					<b>Avaliação:</b>
 					<ul>
 					<li>Prova 1 - 25 pts <b>(05/09)</b> - <i>Aulas 1, 2, 3 e 4</i></li>
-					<li>Prova 2 - 30 pts <b>(17/10)</b></li>
+					<li>Prova 2 - 25 pts <b>(17/10)</b></li>
 					<li>Prova 3 - 30 pts <b>(21/11)</b></li>
+					<li>Listas - 5 pts <b>(17/10 e 21/11)</b></li>
 					<li>Seminário - 15 pts <b>(25/11 e 28/11)</b></li>
 					</ul>
 					</div>
@@ -104,6 +105,7 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 7 - Smells.ppt"> Aula 7 - <i>Bad Smells</i> e Refatoração</a></button></li>	
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Reuso-Parte1.ppt"> Aula 8 - Reuso de Software</a></button></li>	
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Técnicas de Reuso.ppt"> Aula 8 - Técnicas de Reuso de Software</a></button></li>	
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 9 - Arquitetura de Software.pptx"> Aula 9 - Arquitetura de Software</a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Manutencao de Software.pdf"> Aula 9 - Manutenção de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Validacao-Verificacao-Teste.pdf"> Aula 9 - Validação, Verificação e Teste</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Testes de Unidade.pdf"> Aula 9 - Testes de Unidade</a></button></li>
