--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -84,7 +84,8 @@
 					<div>
 					<b>Avaliação e Prazos:</b>
 					<ul>
-					<li>Trabalho Prático - 100 pts</li>
+					<li>Trabalho Prático - 80 pts</li>
+					<li>Exercício Prático - 20 pts</li>
 					<li>Definição dos grupos <b>(até 30/09)</b></li>
 					<li>Entrega da primeira fase <b>(até 6/11)</b></li>
 					<li>Arguição dos grupos <b>(13/11)</b></li>
