--- a/gsi526.html
+++ b/gsi526.html
@@ -106,11 +106,11 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Reuso-Parte1.ppt"> Aula 8 - Reuso de Software</a></button></li>	
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Técnicas de Reuso.ppt"> Aula 8 - Técnicas de Reuso de Software</a></button></li>	
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 9 - Arquitetura de Software.pptx"> Aula 9 - Arquitetura de Software</a></button></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Manutencao de Software.pdf"> Aula 9 - Manutenção de Software</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Validacao-Verificacao-Teste.pdf"> Aula 9 - Validação, Verificação e Teste</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Testes de Unidade.pdf"> Aula 9 - Testes de Unidade</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Testes de Desenvolvimento.pdf"> Aula 9 - Testes de Desenvolvimento</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Testes de Release.pdf"> Aula 9 - Testes de Release </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula10 - Testes de Desenvolvimento.pdf"> Aula 10 - Testes de Desenvolvimento</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula10 - Testes de Unidade.pdf"> Aula 10 - Testes de Unidade</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula10 - Testes de Release.pdf"> Aula 10 - Testes de Release </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula11 - Manutencao de Software.pdf"> Aula 11 - Manutenção de Software</a></button></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Validacao-Verificacao-Teste.pdf"> Aula 9 - Validação, Verificação e Teste</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 10 - Arquitetura de Software.pdf"> Aula 10 - Arquitetura de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 11 - Papel_Arquiteto_Software.pptx"> Aula 11 - O Papel do Arquiteto de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 12 - WebMVCePatterns.pdf"> Aula 12 - O Padrão Web MVC (Model-View-Controller)</a></button></li>
