coloquei a materia das provas de pc2 e es

--- a/poo.html
+++ b/poo.html
@@ -84,8 +84,8 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 30 pts <b>(10/09)</b></li>
-					<li>Prova 2 - 35 pts <b>(22/10)</b></li>
+					<li>Prova 1 - 30 pts <b>(10/09)</b> - <i>Aulas 1, 2 e 3</i></li>
+					<li>Prova 2 - 35 pts <b>(22/10)</b> - <i>Aulas 4, 5, 6 e 7</i></li>
 					<li>Prova 3 - 35 pts <b>(26/11)</b></li>					
 					</ul>
 					</div>
