--- a/gsi526.html
+++ b/gsi526.html
@@ -149,6 +149,7 @@
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/lista_prova1.pdf"> Lista para a Prova 1</a></button></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/lista_prova2.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Lista para a Prova 2</a></button></li>
+					<li><i class="icon-book"></i><a href="https://www.tutorialspoint.com/junit/index.htm" target="_blank">Tutorial sobre o framework JUnit</a></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/notas_esof_cefet_2019.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Notas Parciais</b></a></button></li>
 					<!-- <li><i class="icon-stackoverflow"></i><a href="https://www.w3schools.com/"> Tutorial sobre PHP, JavaScript, HTML, CSS</a></button></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/gsi538/GWT-Tutorial.pdf"> Tutorial: Como instalar o plugin do GWT no Eclipse IDE</a></button></li>
