--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -98,7 +98,12 @@
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 1 - Exercícios de POO </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/GWT-Tutorial.pdf"> Aula 2 - Tutorial de GWT </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/pluginGWT.pdf"> Aula 3 - Plugin do GWT (Instalação) </a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Grupos-ES.pdf"> Relação dos Grupos </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Grupos-ES.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Relação dos Grupos do Trabalho</a></button></li>
+						<li><i class="icon-book"></i><a href="https://www.youtube.com/watch?v=brSwmLQA0iA" target="_blank"> <b>Primeiros passos com Node.js - Parte #1 </b></a></li>
+						<li><i class="icon-book"></i><a href="https://www.youtube.com/watch?v=_Lu1JGrPl6g" target="_blank"> <b>React #1 - Preparando o ambiente para desenvolvimento </b></a></li>
+						<li><i class="icon-book"></i><a href="https://www.youtube.com/watch?v=ov7VjrH5kfw" target="_blank"> <b>Criando um Blog do Zero com Node.js e React.js (Parte 1) </b></a></li>
+						<li><i class="icon-book"></i><a href="https://www.youtube.com/watch?v=1mLbR-TbNdM" target="_blank"> <b>Criando um Blog do Zero com Node.js e React.js (Parte 2) </b></a></li>
+						<li><i class="icon-book"></i><a href="https://www.youtube.com/watch?v=_y7rKxqPoyg" target="_blank"> <b>Tutorial sobre Angular.js </b></a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/exercicio_lab.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Exercício Prático (Aula 18/09) </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/especificacao_trab.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Trabalho </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/sistema_reserva.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Diagrama de Classe do Trabalho </a></button></li>
