--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -84,12 +84,14 @@
 					<div>
 					<b>Avaliação e Prazos:</b>
 					<ul>
-					<li>Trabalho Prático - 80 pts</li>
-					<li>Exercício Prático - 20 pts</li>
-					<li>Definição dos grupos <b>(até 30/09)</b></li>
-					<li>Entrega da primeira fase <b>(até 6/11)</b></li>
-					<li>Arguição dos grupos <b>(13/11)</b></li>
-					<li>Entrega da segunda fase <b>(04/12)</b></li>
+					<li>Imobiliária - 20 pts <b>(27/11)</b></li>
+					<li>Sistema de Reserva de Hotéis e Passagens Aéreas - 80 pts</li>
+						<ul>
+						<li>Definição dos grupos <b>(até 30/09)</b></li>
+						<li>Entrega da primeira fase <b>(até 6/11)</b></li>
+						<li>Arguição dos grupos <b>(13/11)</b></li>
+						<li>Entrega da segunda fase <b>(04/12)</b></li>
+						</ul>
 					</ul>
 					</div> 
 					<b>Material:</b>
