--- a/gsi526.html
+++ b/gsi526.html
@@ -112,6 +112,7 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula11 - Manutencao de Software.pdf"> Aula 11 - Manutenção de Software </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula12 - Leis de Lehman.pdf"> Aula 12 - Evolução de Software (Leis de <i>Lehman</i>)</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula13 - Linha de produtos.pdf"> Aula 13 - Linha de Produtos de Software</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 14 - Padrões Arquiteturais.pptx"> Aula 14 - Padrões Arquiteturais </a></button></li>						
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Validacao-Verificacao-Teste.pdf"> Aula 9 - Validação, Verificação e Teste</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 10 - Arquitetura de Software.pdf"> Aula 10 - Arquitetura de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 11 - Papel_Arquiteto_Software.pptx"> Aula 11 - O Papel do Arquiteto de Software</a></button></li>
