Adicionei a aula sobre Controle de Versão com Git

--- a/gsi526.html
+++ b/gsi526.html
@@ -114,8 +114,8 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula13 - Linha de produtos.pdf"> Aula 13 - Linha de Produtos de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 14 - Padrões Arquiteturais.pptx"> Aula 14 - Padrões Arquiteturais </a></button></li>						
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 15 - SistemasControleDeVersao.pdf"> Aula 15 - Sistemas de Controle de Versão </a></button></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 16 - Git.pdf"> Aula 10 - Arquitetura de Software</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 11 - Papel_Arquiteto_Software.pptx"> Aula 11 - O Papel do Arquiteto de Software</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 16 - Git.pdf"> Aula 16 - Controle de Versão com o Git</a></button></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 11 - Papel_Arquiteto_Software.pptx"> Aula 11 - O Papel do Arquiteto de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 12 - WebMVCePatterns.pdf"> Aula 12 - O Padrão Web MVC (Model-View-Controller)</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 13 - SistemasDeControleDeVersao.pdf"> Aula 13 - Sistemas de Controle de Versão</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 14 - Classes E Relacionamentos.pdf"> Aula 14 - Classes e Relacionamentos</a></button></li>
